fix: InfoStand height 520px + effect aligned top

--- a/src/components/room/widgets/avatar-info/AvatarInfoWidgetView.scss
+++ b/src/components/room/widgets/avatar-info/AvatarInfoWidgetView.scss
@@ -39,7 +39,7 @@
         position: relative;
         min-width: 280px;
         max-width: 280px;
-        height: 400px;
+        height: 520px;
         z-index: $infostand-zindex;
         background:
             linear-gradient(rgba(12, 12, 16, 0.92), rgba(12, 12, 16, 0.92)) padding-box,
